--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
     "strict": true,
     "jsx": "preserve",
     "noEmit": true,
-    "target": "ES2015"
+    "target": "ES2015",
+    "skipLibCheck": true
   },
   "include": ["src"]
 }
