--- a/.github/workflows/release-canary.yml
+++ b/.github/workflows/release-canary.yml
@@ -27,12 +27,12 @@ jobs:
       - name: Type Check
         run: yarn type-check
       - name: Configure Git Credentials
-        if: github.repository == 'n1ru4l/react-use-transition'
+        if: github.repository == 'n1ru4l/toposort'
         run: |
           git config --global user.email "github-action@users.noreply.github.com"
           git config --global user.name "Github Action"
       - name: Publish
-        if: github.repository == 'n1ru4l/react-use-transition'
+        if: github.repository == 'n1ru4l/toposort'
         id: publish-step
         run: |
           cd dist
