--- a/.github/workflows/release-canary.yml
+++ b/.github/workflows/release-canary.yml
@@ -24,6 +24,8 @@ jobs:
         run: yarn test
       - name: Build
         run: yarn build
+      - name: Check prettier formatting
+        run: yarn format:lint
       - name: Type Check
         run: yarn type-check
       - name: Configure Git Credentials
