--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "@types/jest": "26.0.20",
     "cpy-cli": "3.1.1",
     "cross-env": "7.0.3",
+    "husky": "4",
     "jest": "26.6.3",
+    "lint-staged": "10.5.4",
     "prettier": "2.2.1",
     "rimraf": "3.0.2",
     "rollup": "2.40.0",
@@ -49,6 +51,16 @@
     "build": "rimraf dist && yarn build:cjs && yarn build:esm && cpy README.md ./dist",
     "test": "jest",
     "type-check": "tsc",
-    "release": "changeset publish"
+    "release": "changeset publish",
+    "format": "prettier .",
+    "format:lint": "prettier --check ."
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{yml,js,ts,md,json}": "prettier --write"
   }
 }
