--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,12 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "strict": true,
+    "alwaysStrict": true,
+    "module": "node16",
+    "target": "ES2020",
     "jsx": "preserve",
     "noEmit": true,
-    "target": "ES2015",
     "skipLibCheck": true
   },
   "include": ["src"]
