--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
 {
   "compilerOptions": {
     "strict": true,
+    "alwaysStrict": true,
+    "module": "node16",
+    "target": "ES2020",
     "jsx": "preserve",
-    "noEmit": true,
-    "target": "ES2015",
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "declaration": true
   },
   "include": ["src"]
 }
